fix bouton CTA + email via Resend API

--- a/static/landing/index.html
+++ b/static/landing/index.html
@@ -101,24 +101,25 @@
 
         .nav-links a:hover { color: var(--gold); }
 
-        .btn-nav-cta {
+        .nav-links .btn-nav-cta {
             padding: 0.6rem 1.6rem;
             background: var(--gold);
-            color: var(--bg);
+            color: #0a0a0c;
             border: none;
             border-radius: 4px;
             font-family: 'Outfit', sans-serif;
-            font-weight: 600;
+            font-weight: 700;
             font-size: 0.82rem;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
             text-transform: uppercase;
             cursor: pointer;
             transition: all 0.3s;
             text-decoration: none;
         }
 
-        .btn-nav-cta:hover {
+        .nav-links .btn-nav-cta:hover {
             background: var(--gold-bright);
+            color: #0a0a0c;
             box-shadow: 0 0 30px var(--gold-glow);
         }
 
@@ -239,11 +240,11 @@
         .btn-primary {
             padding: 1rem 2.5rem;
             background: var(--gold);
-            color: var(--bg);
+            color: #000;
             border: none;
             border-radius: 4px;
             font-family: 'Outfit', sans-serif;
-            font-weight: 600;
+            font-weight: 700;
             font-size: 0.9rem;
             letter-spacing: 1.5px;
             text-transform: uppercase;
